crates/musq-macros/tests/trybuild/fail_sql_empty_idents.stderr
error: empty list
 --> tests/trybuild/fail_sql_empty_idents.rs:4:13
  |
4 |     let _ = sql!("SELECT {idents:[]} FROM t")?;
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sql` (in Nightly builds, run with -Z macro-backtrace for more info)
